<resources>
    <string name="language_code">en</string>
    <string name="app_name">Conto</string>
    <string name="authenticator_app_name">TokenD Authenticator</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="back_to_sign_in">Back to Sign in</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="recover_password">Recover password</string>
    <string name="recover_password_action">Recover</string>
    <string name="sign_out">Sign out</string>
    <string name="loading_data">Loading data…</string>
    <string name="retry">Retry</string>
    <string name="share">Share</string>
    <string name="share_account_id">Share Account ID</string>
    <string name="share_account">Share Account</string>
    <string name="check_your_email_to_verify_account">Check your email to verify account</string>
    <string name="continue_action">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="email_not_verified_explanation">
        It seems that your email is not verified yet.
        Please check your spam folder or request a new letter
    </string>
    <string name="resend_letter">Resend letter</string>
    <string name="paste">Paste</string>
    <string name="no_transaction_history">No movements history</string>
    <string name="no_trades_history">No trades history</string>
    <string name="received">Received</string>
    <string name="price">Price</string>
    <string name="payment_description">Description</string>
    <string name="withdrawal_fee_warning">Receive amount may be lower due to additional fees</string>
    <string name="sign_out_confirmation">Are you sure you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="password_changed_successfully">Password has been changed</string>
    <string name="change_password_action">Change</string>
    <string name="current_password">Current password</string>
    <string name="open_action">Open</string>
    <string name="copy_action">Copy</string>
    <string name="template_balance">Balance: %1$s</string>
    <string name="template_available">%1$s available</string>
    <string name="to_receive">To receive</string>
    <string name="confirm_action">Confirm</string>
    <string name="processing_progress">Processing…</string>
    <string name="withdrawal_request_created">Withdrawal request has been created</string>
    <string name="details">Details</string>
    <string name="create_balance_action">Add to balances</string>
    <string name="view_asset_history_action">View history</string>
    <string name="no_assets_found">No assets found</string>
    <string name="asset_balance_exists">Balance exists</string>
    <string name="template_asset_code_asset">%1$s asset</string>
    <string name="asset_overview">Overview</string>
    <string name="template_file_download_location">File will be downloaded to the \"%1$s\" directory</string>
    <string name="template_asset_balance_created">%1$s balance has been created</string>
    <string name="search">Search</string>
    <string name="recipient_label">Recipient\'s email or phone number</string>
    <string name="payment_description_label">Description (optional)</string>
    <string name="payment_successfully_sent">Payment has been sent</string>
    <string name="no_offers">No orders</string>
    <string name="template_offer_bid_asset">Bid (%1$s)</string>
    <string name="template_offer_ask_asset">Ask (%1$s)</string>
    <string name="template_asset_pair">%1$s/%2$s</string>
    <string name="create_offer_title">Create order</string>
    <string name="update_offer_title">Update order</string>
    <string name="buy_action">Buy</string>
    <string name="sell_action">Sell</string>
    <string name="offer_confirmation_title">Order</string>
    <string name="offer_created">Order has been created</string>
    <string name="pending_offers_title">Pending orders</string>
    <string name="no_pending_offers">No pending orders</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="template_price_one_equals">1 %1$s = %2$s</string>
    <string name="cancel_offer_action">Cancel order</string>
    <string name="cancel_offer_confirmation">Are you sure you want to cancel this order?</string>
    <string name="offer_canceled">Order has been canceled</string>
    <string name="email_verified">Email has been verified</string>
    <string name="touch_sensor">Touch the sensor</string>
    <string name="aml_alert_reason">Reason</string>
    <string name="aml_alert_reason_unknown">Unknown</string>
    <string name="charged">Charged</string>
    <string name="fee_paid_by_sender">Fee paid by sender</string>
    <string name="no_fee_charged">No fee charged</string>
    <string name="no_fee">No fee</string>
    <string name="no_balances_found">No balances found</string>
    <string name="template_fee">Fee: %1$s</string>
    <string name="template_recipients_fee">Recipient\'s fee: %1$s</string>
    <string name="asset_summary_title">Asset summary</string>
    <string name="asset_available">Available</string>
    <string name="asset_available_lowercase">available</string>
    <string name="asset_issued">Issued</string>
    <string name="asset_maximum">Maximum</string>
    <string name="asset_terms_of_use">Terms of Use</string>
    <string name="asset_can_be_transferred">Can be transferred</string>
    <string name="asset_can_not_be_transferred">Can\'t be transferred</string>
    <string name="asset_can_be_withdrawn">Can be withdrawn</string>
    <string name="asset_can_not_be_withdrawn">Can\'t be withdrawn</string>
    <string name="dashboard_title">Wallet</string>
    <string name="deposit_title">Deposit</string>
    <string name="withdraw_title">Withdraw</string>
    <string name="explore_assets_title">Assets</string>
    <string name="send_title">Send</string>
    <string name="trade_title">Trade</string>
    <string name="settings_title">Settings</string>
    <string name="polls_title">Polls</string>
    <string name="template_tx_from">From %1$s</string>
    <string name="template_tx_to">To %1$s</string>
    <string name="tx_action_issued">Issued</string>
    <string name="tx_action_withdrawn">Withdrawn</string>
    <string name="tx_action_investment">Contribution</string>
    <string name="tx_action_received">Received</string>
    <string name="tx_action_sent">Sent</string>
    <string name="tx_action_locked">Locked</string>
    <string name="tx_action_unlocked">Unlocked</string>
    <string name="tx_action_charged">Charged</string>
    <string name="tx_action_matched">Matched</string>
    <string name="tx_sender">Sender</string>
    <string name="tx_recipient">Recipient</string>
    <string name="tx_fee">Fee</string>
    <string name="tx_cause">Cause</string>
    <string name="tx_reference">Reference</string>
    <string name="tx_withdrawal_destination">Destination address</string>
    <string name="template_tx_in">In %1$s</string>
    <string name="pay_recipient_fee_action">Pay recipient\'s fee</string>
    <string name="data_has_been_copied">Data has been copied to the clipboard</string>
    <string name="settings_account_group">Account</string>
    <string name="settings_security_group">Security</string>
    <string name="account_id_title">Account ID</string>
    <string name="account_title">Account</string>
    <string name="verification_title">Verification</string>
    <string name="verification_summary">In order to verify your account data use web client</string>
    <string name="tfa_title">Two-factor authentication</string>
    <string name="change_password_title">Change password</string>
    <string name="error_cannot_be_empty">Cannot be empty</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_passwords_mismatch">Password doesn\'t match confirmation</string>
    <string name="error_weak_password">Password is weak</string>
    <string name="error_email_already_taken">Email is already taken</string>
    <string name="error_try_again">An error occurred. Try again later</string>
    <string name="error_connection_try_again">Connection error. Try again later</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_email_not_verified">Email is not verified</string>
    <string name="error_insufficient_balance">Insufficient balance</string>
    <string name="error_no_transferable_assets">No transferable assets found</string>
    <string name="error_invalid_recipient">Invalid recipient</string>
    <string name="error_no_withdrawable_assets">No withdrawable assets found</string>
    <string name="error_no_tradeable_pairs">No tradeable pairs found</string>
    <string name="error_cannot_send_to_yourself">Send to yourself is not allowed</string>
    <string name="error_fingerprint_locked">Too many failed attempts. Try again later</string>
    <string name="error_payment_amount_less_than_fee">Payment amount is less than recipient\'s fee</string>
    <string name="error_password_changed">Password has been changed, enter your new password to continue</string>
    <string name="error_tx_general">Transaction failed. Try again later</string>
    <string name="error_tx_bad_auth">Transaction signature is invalid</string>
    <string name="error_tx_limits">Transaction exceeds limits set to your account</string>
    <string name="error_tx_insufficient_balance">@string/error_insufficient_balance</string>
    <string name="error_tx_invalid_amount">Transaction amount is invalid</string>
    <string name="error_tx_malformed">Transaction is malformed</string>
    <string name="error_tx_account_blocked">Your account is blocked</string>
    <string name="error_tx_invalid_fee">Transaction fee is invalid</string>
    <string name="error_tx_not_allowed">You are not allowed to perform this action</string>
    <string name="error_tx_cross_self">Current order crosses one of your existing orders</string>
    <string name="error_tx_not_found">Requested entry not found</string>
    <string name="tfa_dialog_title">Two-factor authentication</string>
    <string name="tfa_default_dialog_message">Enter verification code</string>
    <string name="amount_label">Amount</string>
    <string name="go_to_confirmation_btn_label">Go to confirmation</string>
    <string name="invest_asset_hint">Asset</string>
    <string name="invite_action">Invite</string>
    <string name="list_all_invitees_emails_below_separate_them_with_commas">List all invitees emails below, separate them with commas</string>
    <string name="emails_title">Emails</string>
    <string name="issue">Issue</string>
    <string name="set_phone_number_explanation">Add your phone number to the account to let your friends find you faster</string>
    <string name="phone_number">Phone number</string>
    <string name="set_phone_number">Set number</string>
    <string name="complete_account_setup_explanation">Enter your name to complete account setup</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="set_telegram_username_explanation">Connect Telegram to the account to let your friends find you faster</string>
    <string name="telegram_username">Telegram username</string>
    <string name="connect_telegram">Connect</string>
    <string name="card_number">Card number</string>
    <string name="save_this_card">Save this card</string>
</resources>