<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.tokend.template.features.invites.view.InviteNewUsersActivity"
    android:background="@color/background">

    <include layout="@layout/appbar" />

    <LinearLayout
        style="@style/LimitedMatchParentWidthConstraint"
        android:orientation="vertical"
        android:padding="@dimen/standard_margin"
        app:layout_constraintBottom_toBottomOf="@null"
        app:layout_constraintBottom_toTopOf="@id/invite_button"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintTop_toTopOf="@null">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_all_invitees_emails_below_separate_them_with_commas" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/emails_edit_text"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_padding"
            android:hint="@string/emails_title"
            android:inputType="text|textEmailAddress|textMultiLine"/>

    </LinearLayout>

    <Button
        android:id="@+id/invite_button"
        style="@style/PrimaryButton.NoBorders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/invite_action"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
