<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.tokend.template.features.kyc.view.ClientKycActivity">

    <include layout="@layout/appbar" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroll_view"
            style="@style/LimitedMatchParentWidthConstraint">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/standard_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/complete_account_setup_explanation" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/first_name_edit_text"
                    style="@style/EditText.OneLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_padding"
                    android:hint="@string/first_name"
                    android:inputType="text|textPersonName|textCapWords" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/last_name_edit_text"
                    style="@style/EditText.OneLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_padding"
                    android:hint="@string/last_name"
                    android:imeOptions="actionDone"
                    android:inputType="text|textPersonName|textCapWords" />

                <include layout="@layout/layout_progress" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin">

                    <Button
                        android:id="@+id/continue_button"
                        style="@style/PrimaryButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/continue_action" />

                </RelativeLayout>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <include layout="@layout/include_appbar_elevation" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>
