<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="org.tokend.template.features.massissuance.view.MassIssuanceActivity">

    <include layout="@layout/appbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <include layout="@layout/include_appbar_elevation" />
    </FrameLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        style="@style/LimitedMatchParentWidthConstraint"
        app:layout_constraintBottom_toBottomOf="@null"
        app:layout_constraintBottom_toTopOf="@id/issue_button"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintTop_toTopOf="@null"
        tools:ignore="MissingConstraints">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/standard_margin">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/asset_edit_text"
                    style="@style/EditText.OneLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    app:met_floatingLabelAlwaysShown="true"
                    app:met_floatingLabelText="@string/invest_asset_hint"
                    tools:text="BTC" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/amount_edit_text"
                    style="@style/EditText.OneLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_padding"
                    android:gravity="start"
                    android:hint="@string/amount_label"
                    android:inputType="numberDecimal" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/emails_edit_text"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_padding"
                    android:hint="@string/emails_title"
                    android:inputType="text|textEmailAddress|textMultiLine"
                    android:minLines="1" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <Button
        android:id="@+id/issue_button"
        style="@style/PrimaryButton.NoBorders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/issue"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
