<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        style="@style/LimitedMatchParentWidthConstraint"
        android:layout_marginStart="@dimen/standard_padding"
        android:layout_marginEnd="@dimen/standard_padding"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/confirm_button">

        <TextView
            android:id="@+id/top_info_text_view"
            style="@style/SecondaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            tools:text="My awesome asset" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/space"
            android:gravity="center"
            android:text="@string/card_number"
            android:textSize="@dimen/text_size_heading" />

        <Space
            android:id="@+id/space"
            android:layout_width="0dp"
            android:layout_height="@dimen/standard_margin"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/double_margin" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/card_number_edit_text"
            style="@style/EditText.OneLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/space"
            android:autofillHints="creditCardNumber"
            android:digits=" 0123456789"
            android:gravity="center"
            android:inputType="text|number"
            android:textSize="18sp"
            app:met_floatingLabel="none"
            tools:text="5375 4141 0544 2323" />

        <ImageButton
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/card_number_edit_text"
            android:layout_alignEnd="@id/card_number_edit_text"
            android:layout_marginTop="1dp"
            android:background="@null"
            android:padding="@dimen/half_standard_margin"
            app:srcCompat="@drawable/ic_close" />

        <CheckBox
            android:id="@+id/save_card_number_checkbox"
            style="@style/SecondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_number_edit_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/half_standard_margin"
            android:checked="true"
            android:text="@string/save_this_card" />

    </RelativeLayout>

    <Button
        android:id="@+id/confirm_button"
        style="@style/PrimaryButton.NoBorders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_confirmation_btn_label"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>